--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.5",
     "@nestjs/platform-express": "^10.3.7",
     "bcrypt": "^5.1.1",
+    "bkdev-blog-backend": "file:",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongoose": "^7.5.3",
